# gridtools

./: .gitignore  CMakeLists.txt
cmake/: GridToolsConfig.cmake.in  definitions.cmake  export.cmake  flags.cmake  gt_gen.cmake
examples/stencil_composition/: tridiagonal_solver.cpp
gt_dump/: CMakeLists.txt  generate_code.py
gt_dump/gt_dump/: generator.hpp  generator_expandable.hpp  helpers.hpp  use_generated.hpp  use_generated_expandable.hpp
gt_dump/proto/: interface.proto
gt_dump/templates/: generator.cpp.j2
gt_dump/templates/chunks/: adaptor.cpp.j2  arg_map.cpp.j2  block_helpers.cpp.j2  computation.cpp.j2  computation_info.cpp.j2  eval.cpp.j2  extent.cpp.j2  helpers.j2  ij_caches.cpp.j2  includes.cpp.j2  interval_map.cpp.j2  k_caches.cpp.j2  kind_fields.cpp.j2  launch_kernel.cpp.j2  mss_all_ptrs.cpp.j2  mss_ptrs.cpp.j2  offsets.cpp.j2  run_multistage.cpp.j2  storage_infos.cpp.j2
gt_examples/stencil-composition/: CMakeLists.txt  issue.cpp  issue.cu
include/gridtools/common/: tuple_util.hpp
include/gridtools/meta/: macros.hpp
include/gridtools/stencil-composition/: intermediate_impl.hpp  make_computation.hpp
include/gridtools/stencil_composition/: intermediate.hpp  make_computation.hpp
include/gridtools/stencil_composition/expandable_parameters/: intermediate_expand.hpp  make_computation.hpp
include/gridtools/storage/: storage_traits_x86.hpp
include/gridtools/tools/: computation_fixture.hpp
regression/: CMakeLists.txt  copy_stencil.cpp  generate_code.py  horizontal_diffusion.cpp  horizontal_diffusion_functions.cpp  horizontal_diffusion_fused.cpp  simple_hori_diff.cpp  tridiagonal.cpp  vertical_advection_dycore.cpp
unit_tests/: CMakeLists.txt
unit_tests/stencil-composition/: CMakeLists.txt
unit_tests/stencil-composition/structured_grids/: test_stencils.hpp
unit_tests/stencil_composition/: CMakeLists.txt
unit_tests/stencil_composition/structured_grids/: test_expandable_parameters.cpp  test_stencils.cpp
